Refined idea validator and integrated research workflow with podcast generator

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,8 @@ firecrawl-py = "^1.4.0"
 sendgrid = "^6.11.0"
 crawl4ai = {extras = ["transformers"], version = "^0.3.72"}
 pydub = "^0.25.1"
+llama-index-llms-nvidia = "^0.2.6"
+llama-index-embeddings-nvidia = "^0.2.4"
 
 [tool.poetry.dependencies.uvicorn]
 extras = [ "standard" ]
