--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "generate": "tsx app/api/chat/engine/generate.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.72",
     "@apidevtools/swagger-parser": "^10.1.0",
     "@e2b/code-interpreter": "0.0.9-beta.3",
     "@llamaindex/core": "^0.2.6",
@@ -27,9 +28,12 @@
     "dotenv": "^16.3.1",
     "duck-duck-scrape": "^2.2.5",
     "formdata-node": "^6.0.3",
+    "framer-motion": "^11.11.11",
     "got": "^14.4.1",
+    "highlight.js": "^11.10.0",
     "llamaindex": "0.6.22",
     "lucide-react": "^0.294.0",
+    "marked": "^14.1.2",
     "next": "^14.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,12 +44,12 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "supports-color": "^8.1.1",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tiktoken": "^1.0.15",
     "uuid": "^9.0.1",
     "vaul": "^0.9.1",
-    "marked": "^14.1.2",
-    "highlight.js": "^11.10.0"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
